--- a/site 2 oficial/index.html
+++ b/site 2 oficial/index.html
@@ -38,15 +38,13 @@
         </div>
         <div class="link">
                 <a href="https://open.spotify.com/playlist/3kkLRFXcmJO4pA5FBEarHe" class="container__link"><img src="icons8-contato-50.png" alt="minhas compras" class="container__imagem"></a>
-                <p class="container__texto">Spotify</p>
-                <a href="https://www.livrariascuritiba.com.br/?gad_source=1&gclid=Cj0KCQjwy4KqBhD0ARIsAEbCt6ixX3MfCkiYaYhUk9UljxHF37dsRp1yXUOgyn8gL4gdZZbpD4nqr0kaAu3dEALw_wcB"><img src="icons8-estrela-bahai-50.png" alt="email" class="container__imagem"></a>
-                <p class="container__texto">Site</p>
+                <p class="container__texto">Parcerias</p>
             </div>
         </div>
     </header>    
     <section class="banner">
         <input type="search" class="banner__pesquisa" placeholder="Pesquisa">
-        
+
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo"> Promoções</h2>
